fixed hero min-height and sub-cats overlapping

--- a/dev/scss/includes/_hero.scss
+++ b/dev/scss/includes/_hero.scss
@@ -59,6 +59,7 @@
   .carousel-item{
     background-repeat:no-repeat;
     background-size:cover;
+    min-height:300px;
   }
 }
 
